# fgradar-clone

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README  THANKS  config.h.in  doxygen.conf
cmake/: cmake_uninstall.cmake.in  cpack_config.cmake
data/Nasal/app/: 0unit-tests.nas  demo.nas  hello.nas  test-oop.nas  unit-tests.nas
data/Nasal/lib/: gtk.nas
data/Nasal/tests/: tests.nas
po/: es.po  fgradar.mo  fgradar.pot
scripts/: generate_doc.sh
src/: CMakeLists.txt  FGRadarApplication.cxx  FGRadarApplication.hxx  app.cpp  app.hpp  fgradar.cpp  fgradar.hpp  i18n.hpp  main.cpp
src/aircraft/: aircraft.cpp  aircraft.hpp
src/airport/: airport.cpp  airport.hpp  airport_manager.cpp  airport_manager.hpp  runway.cpp  runway.hpp  taxiway.cpp  taxiway.hpp
src/config/: config.cpp  config.hpp
src/entity/: entity.hpp  entity_manager.hpp  navaid.cpp  navaid.hpp  navaid_manager.cpp  navaid_manager.hpp
src/gui/: CMakeLists.txt  mainwin.cpp  mainwin.hpp  mainwindow.cpp  mainwindow.hpp  preferences_dialog.cpp  preferences_dialog.hpp  radar.cpp  radar.hpp
src/gui.old/: label.hpp  mainwin.cpp  mainwin.hpp  preferencesdlg.cpp  preferencesdlg.hpp
src/include/: config.h.in  version.h.in
src/io/: CMakeLists.txt  file_manager.cpp  file_manager.hpp  logger.cpp  logger.hpp
src/main/: ApplicationProperties.hxx  CMakeLists.txt  fgradar.cpp  fgradar.hpp  fgradar_app.cxx  fgradar_app.hxx  i18n.hxx  main.cpp  main.cxx  props.cxx  props.hxx
src/map/: CMakeLists.txt  map.cpp  map.hpp  map_layer.cpp  map_layer.hpp  projection.hpp
src/math/: CMakeLists.txt  geod.hpp  projection.hpp  vec2.hpp
src/multiplayer/: CMakeLists.txt  traffic.cxx  traffic.hxx
src/nasal/: BUGS  CMakeLists.txt  FIXME  README.cmake  TODO
src/nasal/lib/: CMakeLists.txt
src/nasal/src/: CMakeLists.txt  config.h.in  regexlib.c
src/network/: fgcom.hpp  mp_protocol.cxx  mp_protocol.hxx
src/route/: flightplan.cpp  flightplan.hpp
src/scripting/: CMakeLists.txt  NasalSys.cxx  NasalSys.hxx  cairolib.c  gtklib.c  iolib.c  iolib.h  nasal-props.cxx  sgsocketlib.cxx  unixlib.c
src/simgear/: CMakeLists.txt
src/simgear/app/: SGApplication.cxx  SGApplication.hxx  SGCmdApplication.cxx  TODO
src/simgear/structure/: FGApplication.hxx  FGGLApplication.cxx  FGGLApplication.hxx  README  SGApplication.cxx  SGApplication.hxx  SGCmdApplication.cxx  SGCmdApplication.hxx  SGScriptableApplication.cxx  SGScriptableApplication.hxx  SG_OSGApplication.hxx
src/util/: constants.hpp  singleton.hpp  utils.cpp  utils.hpp
src/utils/: CMakeLists.txt  constants.hpp  geod.hpp  singleton.hpp  string_utils.cpp  string_utils.hpp  utils.cpp  utils.hpp
